
  [Antti Virtanen]
  * Optimized Qt container loops to use constBegin() and constEnd().
  * Optimized some funcs to return and take params as const refs when possible.
  * Removed ununsed and deprecated code.
  * AbstractSensorChannel, DeviceAdaptor and SysfsAdaptor now hides internal data.
  * SysfsAdaptor destructor implemented.
  * Fixed few compiler warnings.

  [ Shenghua ]
  * Part fixing the random failure problem for contestfw002 test
  * Fix the screen rotation problem, Fixes: NB#219958

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Thu, 27 Jan 2011 12:13:21 +0200

sensord (0.6.36) unstable; urgency=low

  [Antti Virtanen]
  * SocketHandler improved
    - Socket initialization logic simplified.
    - Error fixed from delayed frame sending.
  * SocketReader improved
    - It now reads from socket to data vector directly.
    - Socket "tag" handling simplified: done during connection establishment.
    - dataReceived() for frame aware sensors simplified.
    - SocketReader::read() will now handle better partially read segments.
    - Failed prefix reading will drain socket from invalid data.
  * Fixed data read logic for sensors.
  * ClientApiTest::testBufferingInterval test logic fixed.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 21 Jan 2011 14:43:25 +0200

sensord (0.6.35) unstable; urgency=low

  [Lihan Guo]
  * Combined listen and control session.

  [Shenghua Liu]
  * Seperate the old sensord fold to core and new sensord folders.
  * Fixed randomly failing contextfw tests. Fixes: NB#219695

  [Antti Virtanen]
  * SocketHandler doesn't anymore delegate the work through QTimer if the data must be sent immediately. Small refactoring also done.
  * testBufferingInterval test added for verifying bufferInterval functionality.
  * Refactored SensorManager.
  * SocketHandler now listens for QLocalSocket::error() signals.
  * Implemented AbstractSensorChannelInterface::hwBuffering() accessor.