@@ -80,8 +80,8 @@ public:
      */
     static ALSSensorChannelInterface* interface(const QString& id);
 
-public Q_SLOTS: // METHODS
-    void dataReceived();
+protected:
+    virtual bool dataReceivedImpl();
 
 Q_SIGNALS: // SIGNALS
     /**
