@@ -85,9 +85,8 @@ public:
      */
     static CompassSensorChannelInterface* interface(const QString& id);
 
-
-public Q_SLOTS: // METHODS
-    void dataReceived();
+protected:
+    virtual bool dataReceivedImpl();
 
 Q_SIGNALS: // SIGNALS
 
