@@ -89,8 +89,8 @@ public:
      */
     static ProximitySensorChannelInterface* interface(const QString& id);
 
-public Q_SLOTS: // METHODS
-    void dataReceived();
+protected:
+    virtual bool dataReceivedImpl();
 
 Q_SIGNALS: // SIGNALS
     /**
